Commit for Film and Genre Controller
